--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/node": "^25.0.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/uuid": "^10.0.0",
