--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -12,7 +12,10 @@
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "moduleDetection": "force",
-    "noEmit": true,
+
+    /* REQUIRED FIXES FOR PROJECT REFERENCES */
+    "composite": true,
+    "noEmit": false,
 
     /* Linting */
     "strict": true,
